# harbour

./: ARCHITECTURE.md  Cargo.toml  MANIFEST.md  README.md  clippy.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  security.yml
src/: lib.rs
src/builder/: cmake.rs  context.rs  events.rs  executor.rs  fingerprint.rs  interop.rs  mod.rs  native.rs  plan.rs  surface_resolver.rs  toolchain.rs  util.rs
src/builder/bindings/: mod.rs  parser.rs  types.rs  typescript.rs
src/builder/shim/: capabilities.rs  cmake_shim.rs  custom_shim.rs  defaults.rs  intent.rs  meson_shim.rs  mod.rs  native_shim.rs  registry.rs  trait_def.rs  validation.rs
src/builder/toolchain/: detect.rs  gcc.rs  mod.rs  msvc.rs
src/core/: abi.rs  dependency.rs  manifest.rs  mod.rs  package.rs  package_id.rs  registry.rs  source_id.rs  summary.rs  surface.rs  target.rs  workspace.rs
src/ops/: doctor.rs  ffi_bundle.rs  harbour_add.rs  harbour_build.rs  harbour_new.rs  harbour_update.rs  lockfile.rs  mod.rs  resolve.rs  verify.rs
src/ops/verify/: build.rs  format.rs  harness.rs  mod.rs  resolve.rs  types.rs
src/resolver/: cpp_constraints.rs  encode.rs  errors.rs  mod.rs  resolve.rs  version.rs
src/sources/: cache.rs  git.rs  mod.rs  path.rs  source.rs  vcpkg.rs
src/sources/registry/: config.rs  mod.rs  shim.rs
src/test_support/: fixtures.rs  mod.rs
src/util/: config.rs  context.rs  diagnostic.rs  fs.rs  hash.rs  interning.rs  mod.rs  process.rs  shell.rs  vcpkg.rs
test_ffi_project/: Harbour.toml
test_ffi_project/bindings/: mylib.ts
test_ffi_project/include/: mylib.h
tests/: cli_integration.rs
