[package]
name = "harbour"
version = "0.1.0"
edition = "2021"
description = "A Cargo-like package manager and build system for C"
license = "MIT"

[[bin]]
name = "harbour"
path = "src/bin/harbour/main.rs"

[lib]
name = "harbour"
path = "src/lib.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
toml_edit = "0.22"

# Versioning & Resolution
semver = { version = "1.0", features = ["serde"] }
pubgrub = "0.3"

# Graph
petgraph = "0.6"

# Git
git2 = "0.19"

# Hashing
sha2 = "0.10"
hex = "0.4"

# Filesystem
walkdir = "2.5"
globset = "0.4"
tempfile = "3.14"
directories = "5.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"
miette = { version = "7.4", features = ["fancy"] }

# Logging & UI
tracing = "0.1"
tracing-subscriber = "0.3"
indicatif = "0.17"

# Parallelism
rayon = "1.10"

# Platform detection
target-lexicon = "0.12"
which = "7.0"

# URL handling
url = "2.5"

# JSON for compile_commands.json and build plans
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.14"
assert_cmd = "2.0"
predicates = "3.1"
