[package]
name = "harbour-cli"
version = "0.1.0"
edition = "2021"
description = "A Cargo-like package manager and build system for C"
license = "MIT"
repository = "https://github.com/yourusername/harbour"
keywords = ["c", "build-system", "package-manager"]
categories = ["development-tools", "development-tools::build-utils"]

[[bin]]
name = "harbour"
path = "src/bin/harbour/main.rs"

[[bin]]
name = "harbor"
path = "src/bin/harbour/main.rs"

[lib]
name = "harbour"
path = "src/lib.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
toml_edit = "0.22"

# Versioning & Resolution
semver = { version = "1.0", features = ["serde"] }
pubgrub = "0.3"

# Graph
petgraph = "0.6"

# Git
git2 = "0.19"

# Hashing
sha2 = "0.10"
hex = "0.4"

# Filesystem
walkdir = "2.4"
glob = "0.3"
tempfile = "3.10"
directories = "5.0"
pathdiff = "0.2"

# Error handling
thiserror = "2.0"
anyhow = "1.0"
miette = { version = "7.4", features = ["fancy"] }

# Logging & UI
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
indicatif = "0.18"

# Parallelism
rayon = "1.10"

# Platform detection
which = "7.0"

# URL handling
url = "2.5"

# HTTP client for tarball downloads
reqwest = { version = "0.12", features = ["blocking"] }

# Archive extraction
tar = "0.4"
flate2 = "1.0"

# JSON for compile_commands.json and build plans
serde_json = "1.0"

# Regex for FFI header parsing
regex = "1.10"

[dev-dependencies]
tempfile = "3.14"
assert_cmd = "2.0"
predicates = "3.1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
